# kkb-orx

./: .gitignore  build.py  ch-gen.py  meson.build  readme.md
src/: game.c  game.ini  gamed.ini  gamep.ini
src/bird/: bird.c  bird.h  bird.ini
src/clouds/: clouds.c  clouds.h  clouds.ini
src/flock/: flock.c  flock.h  flock.ini
src/player/: player.c  player.h  player.ini
src/water/: water.c  water.h  water.ini
